--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -3,46 +3,46 @@
 	left: 0;
 	top: 0;
 	width: 100%;
-	height: 56px;
+	height: 46px;
 	padding: 0;
-	background: #673AB7;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+	font-size: 14px;
+	background: rgba(255, 255, 255, 0.3);
+	box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
 	z-index: 50;
 }
 
-.header h1 {
-	float: left;
-	margin: 0;
-	padding: 0 15px;
-	font-size: 24px;
-	line-height: 56px;
+.title {
+	padding: 0 10px;
+	font-size: 18px;
 	font-weight: 400;
-	color: #FFF;
+	color: rgba(255, 255, 255, 1);
 }
 
 .header nav {
-	float: right;
-	font-size: 100%;
+	float: left;
 }
 
 .header nav a {
 	display: inline-block;
-	height: 56px;
-	line-height: 56px;
+	height: 100%;
+	line-height: 46px;
 	padding: 0 15px;
 	min-width: 50px;
 	text-align: center;
-	background: rgba(255,255,255,0);
 	text-decoration: none;
-	color: #FFF;
+	color: rgba(255, 255, 255, 0.8);
 	will-change: background-color;
+	will-change: color;
+	transition: all .2s ease;
 }
 
 .header nav a:hover,
 .header nav a:active {
+	color: rgba(255, 255, 255, 1);
 	background: rgba(0,0,0,0.2);
 }
 
 .header nav a.active {
+	color: rgba(255, 255, 255, 1);
 	background: rgba(0,0,0,0.4);
 }
