--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -15,6 +15,21 @@ html, body {
 	box-sizing: border-box;
 }
 
+::selection {
+  background: transparent;
+}
+
 #app {
 	height: 100%;
+}
+
+.instruction {
+  position: fixed;
+  width: 100%;
+  top: 55px;
+  padding: 0 10%;
+  color: rgba(white, 0.8);
+  text-align: center;
+  font-size: 13px;
+  z-index: 10;
 }
