--- a/src/routes/points/style.scss
+++ b/src/routes/points/style.scss
@@ -1,4 +1,11 @@
 .points {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(#97fdaa 10%, rgb(11, 110, 148) 90%);
+
 	ul {
 		position: absolute;
 		top: 50px;
