--- a/src/routes/home/style.scss
+++ b/src/routes/home/style.scss
@@ -4,4 +4,18 @@
 	width: 100%;
 	background: black;
 	color: white;
+
+	a {
+		display: block;
+		padding: 10px 0;
+		font-size: 20px;
+		font-weight: bold;
+		color: white;
+		text-decoration: none;
+		opacity: 0.8;
+
+		&:hover {
+			opacity: 1;
+		}
+	}
 }
